--- a/machineLearning/cnnTransferLearning.ipynb
+++ b/machineLearning/cnnTransferLearning.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "img = img_to_array(image)\n",
     "img = img.reshape((1, img.shape[0], img.shape[1], img.shape[2]))\n",
-    "img = preprocess_input(img)"
+    "# img = preprocess_input(img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -89,14 +89,14 @@
     {
      "data": {
       "text/plain": [
-       "[[('n02099601', 'golden_retriever', 0.7531765),\n",
-       "  ('n02100583', 'vizsla', 0.061531805),\n",
-       "  ('n02099267', 'flat-coated_retriever', 0.040488884),\n",
-       "  ('n02099849', 'Chesapeake_Bay_retriever', 0.034401458),\n",
-       "  ('n02102480', 'Sussex_spaniel', 0.018299002)]]"
+       "[[('n02099267', 'flat-coated_retriever', 0.63969153),\n",
+       "  ('n02111277', 'Newfoundland', 0.14267391),\n",
+       "  ('n02099712', 'Labrador_retriever', 0.11078263),\n",
+       "  ('n02099849', 'Chesapeake_Bay_retriever', 0.03944637),\n",
+       "  ('n02104029', 'kuvasz', 0.0192229)]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
